@@ -17,6 +17,7 @@ v 7.4.0
   - Font Awesome 4.2 integration (Sullivan Senechal)
   - Add Pushover service integration (Sullivan Senechal)
   - Add select field type for services options (Sullivan Senechal)
+  - Add cross-project references to the Markdown parser (Vinnie Okada)
 
 v 7.3.2
   - Fix creating new file via web editor
